# wolf3d

./: .gitignore  CMakeLists.txt  CMakeLists0.txt  CMakeLists1.txt  Makefile  Norme_errors  README.md  author  wolf3d
include/: SDL2.h  display.h  drawing.h  mySDL2.h  raycasting.h  render.h  wolf3d.h  world.h
libraries/: Makefile  SDL2_build.sh
libraries/SDL/sdl2/2.0.12_1/: INSTALL_RECEIPT.json
libraries/SDL/sdl2/2.0.12_1/lib/cmake/SDL2/: sdl2-config.cmake
libraries/SDL/sdl2/2.0.12_1/lib/pkgconfig/: sdl2.pc
libraries/SDL/sdl2_image/2.0.5/: INSTALL_RECEIPT.json
libraries/SDL/sdl2_image/2.0.5/lib/pkgconfig/: SDL2_image.pc
libraries/SDL/sdl2_mixer/2.0.4/: INSTALL_RECEIPT.json
libraries/SDL/sdl2_mixer/2.0.4/lib/pkgconfig/: SDL2_mixer.pc
libraries/SDL/sdl2_ttf/2.0.15/: INSTALL_RECEIPT.json
libraries/SDL/sdl2_ttf/2.0.15/lib/pkgconfig/: SDL2_ttf.pc
libraries/libft/: CMakeLists.txt  HomeCMakeLists.txt  Makefile  SchoolCMakeLists.txt  ft_atof.c  ft_atoi_base.c  ft_count_atof.c  ft_count_atoi.c  ft_isnumber.c  ft_issign.c  ft_isspace.c  ft_open_read.c  ft_pow.c  ft_read_file.c  ft_strdel.c  get_next_line.c  get_next_line.h  libft.h
materials/: maps.list  textures.list  wall_types.list
materials/maps/: 42.fdf  map1  map2
materials/ppm_converter/: ppm_converter_github.txt
materials/textures/: bush0.ppm  bush2.ppm  bush3.ppm  chahmat.ppm  iron.ppm  linoleum.ppm  rock.ppm  test.ppm
src/: game.c  main.c  movement.c  rendering_loop.c
src/SDL2/: init_sdl.c  quit.c  quit_sdl.c
src/display/: init_sdl.c  quit.c  quit_sdl.c
src/drawing/: draw_line.c  draw_map.c  draw_point.c
src/mySDL2/: init_sdl.c  quit.c  quit_sdl.c
src/parsing/: ft_open_read.c  ft_spnbrcount.c  game_over.c  get_content.c  get_int_array.c  read_map.c  read_map_list.c  read_texture.c  read_texture_list.c  read_textures.c  read_textures_list.c  read_tools.c  read_wall_types.c
src/raycasting/: raycasting.c
src/render/: horizontal.c  ray_casting.c  rendering.c  set_wall_texture.c  vertical.c  wall_draw.c
src/world/: create_box.c  delete_world.c  free_world.c  init_map.c  init_tex.c  init_world.c  newpnt.c  world_print.c
